--- a/CodedByKay.CLI/CodedByKay.CLI.csproj
+++ b/CodedByKay.CLI/CodedByKay.CLI.csproj
@@ -13,4 +13,9 @@
     <PackageReference Include="CommandLineParser" Version="2.9.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <!-- Adjust paths to point one level up from the .csproj file -->
+    <None Include="../README.md" Pack="true" PackagePath="" />
+    <None Include="../LICENSE.txt" Pack="true" PackagePath="" />
+  </ItemGroup>
 </Project>
