Added so you can update assistant id at runtime. A restart of the app is still necessery to make the new assistnat id to take effect

--- a/CodedByKay.CLI/appsettings.json
+++ b/CodedByKay.CLI/appsettings.json
@@ -1,12 +1,12 @@
 {
   "ApplicationSettings": {
     "OpenAIApiKey": "your-api-key-here",
+    "OpenAIAssistantId": "your-assistant-id-here",
     "Model": "model",
     "OpenAIApiUrl": "url",
     "MaxTokens": "max_tokens",
     "Temperature": "temepature",
     "TopP": "top_p",
-    "AverageTokenLength": "average_token_length",
-    "OpenAIAssistantId": "your-assistant-id-here"
+    "AverageTokenLength": "average_token_length"
   }
 }
