--- a/CodedByKay.CLI/CodedByKay.CLI.csproj
+++ b/CodedByKay.CLI/CodedByKay.CLI.csproj
@@ -21,7 +21,7 @@
 
   <ItemGroup>
     <Content Include="appsettings.Development.json">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="appsettings.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
